# Theory

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
src/app/: AppServices.cpp  AppServices.h  AppSettings.cpp  AppSettings.h  AppSettingsService.cpp  AppSettingsService.h  CMakeLists.txt  Main.cpp  MidiInputRecordingService.cpp  MidiInputRecordingService.h  MidiInputTypes.h  ModuleInfo.cpp  ModuleInfo.h  TheorySequencerApplication.cpp  TheorySequencerApplication.h
src/core/: CMakeLists.txt  ModuleInfo.cpp  ModuleInfo.h
src/core/commands/: AddChordRegionCommand.h  AddClipCommand.h  AddCustomScaleCommand.h  AddKeyCenterRegionCommand.h  AddNoteCommand.h  AddScaleModeRegionCommand.h  AddTempoNodeCommand.h  AddTimeSignatureMarkerCommand.h  AddTrackCommand.h  ArpeggiateSelectionCommand.h  AssignTrackInstrumentCommand.h  ChordStackingCommand.h  Command.h  CommandStack.cpp  CommandStack.h  DeleteChordRegionCommand.h  DeleteClipCommand.h  DeleteKeyCenterRegionCommand.h  DeleteNoteCommand.h  DeleteScaleModeRegionCommand.h  ExpressionCommands.cpp  ExpressionCommands.h  GlobalizeChordProgressionCommand.h  MixerCommands.cpp  MixerCommands.h  MoveClipCommand.h  MoveNoteCommand.h  ProjectCommandContext.cpp  ProjectCommandContext.h  ProjectMutationCommands.cpp  ReplaceChordRegionCommand.h  ReplaceKeyCenterRegionCommand.h  ReplaceScaleModeRegionCommand.h  ResizeClipCommand.h  ResizeNoteCommand.h  SeparateNotesToClipCommand.h  SetProjectRhythmSettingsCommand.h  TransposeClipCommand.h
src/core/devices/: FirstPartyDeviceRegistry.cpp  FirstPartyDeviceRegistry.h  SimpleOscComplexSynth.cpp  SimpleOscComplexSynth.h
src/core/diagnostics/: Logger.cpp  Logger.h  PerformanceTrace.cpp  PerformanceTrace.h  Result.h
src/core/midi/: MidiExportOptions.h  MidiExporter.cpp  MidiExporter.h  MidiFileWriter.cpp  MidiFileWriter.h  MidiImporter.cpp  MidiImporter.h
src/core/music_theory/: Chord.cpp  Chord.h  ChordNameFormatter.cpp  ChordNameFormatter.h  ChordQuality.cpp  ChordQuality.h  ChordRecognizer.cpp  ChordRecognizer.h  CustomScaleBuilder.cpp  CustomScaleBuilder.h  CustomScaleValidation.cpp  CustomScaleValidation.h  EnharmonicSpelling.cpp  EnharmonicSpelling.h  MidiPitch.cpp  MidiPitch.h  NoteName.cpp  NoteName.h  PitchClass.cpp  PitchClass.h  ScaleDefinition.cpp  ScaleDefinition.h  ScaleDegree.cpp  ScaleDegree.h  ScaleInstance.cpp  ScaleInstance.h  ScaleLibrary.cpp  ScaleLibrary.h  ScaleMetadata.cpp  ScaleMetadata.h
src/core/sequencing/: AccidentalVisibility.cpp  AccidentalVisibility.h  Arpeggiator.cpp  Arpeggiator.h  AudioClip.cpp  AudioClip.h  Automation.cpp  Automation.h  AutomationPlayback.cpp  AutomationPlayback.h  BorrowedChordAnalysis.cpp  BorrowedChordAnalysis.h  ChordProgressionLane.cpp  ChordProgressionLane.h  ChordRegion.cpp  ChordRegion.h  ClipHarmonicMap.cpp  ClipHarmonicMap.h  ClipLoop.cpp  ClipLoop.h  ClipOverlap.cpp  ClipOverlap.h  DeviceChain.cpp  DeviceChain.h  Expression.cpp  Expression.h  ExpressionDestinationRegistry.cpp  ExpressionDestinationRegistry.h  ExpressionEvaluation.cpp  ExpressionEvaluation.h  ExpressionPhraseEditing.cpp  ExpressionPhraseEditing.h  ExpressionReferenceCleanup.cpp  ExpressionReferenceCleanup.h  ExpressionReleaseGhosts.cpp  ExpressionReleaseGhosts.h  HarmonicContext.cpp  HarmonicContext.h  HarmonicContextResolver.cpp  HarmonicContextResolver.h  (+38 more)
src/core/serialization/: JsonHelpers.cpp  (+8 more)
src/engine/: CMakeLists.txt  EngineTypes.h  ModuleInfo.cpp  ModuleInfo.h  PlaybackEngine.h  TracktionPlaybackEngine.cpp  TracktionPlaybackEngine.h
src/ui/: AudioSettingsComponent.cpp  AudioSettingsComponent.h  BrowserDragPayload.cpp  BrowserDragPayload.h  BrowserPanelComponent.cpp  BrowserPanelComponent.h  CMakeLists.txt  DetailEditorComponent.cpp  DetailEditorComponent.h  DeviceChainComponent.cpp  DeviceChainComponent.h  DiagnosticsComponent.cpp  DiagnosticsComponent.h  HarmonicHeaderComponent.cpp  HarmonicHeaderComponent.h  InspectorComponent.cpp  InspectorComponent.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  ModuleInfo.cpp  ModuleInfo.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginBrowserComponent.cpp  PluginBrowserComponent.h  ScalePaletteComponent.cpp  ScalePaletteComponent.h  StatusBarComponent.cpp  StatusBarComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackListComponent.cpp  TrackListComponent.h  TransportComponent.cpp  TransportComponent.h  WaveformCache.cpp  WaveformCache.h
tests/: CMakeLists.txt
tests/core/: AccidentalVisibilityTest.cpp  BorrowedChordAnalysisTest.cpp  ChordRecognizerTest.cpp  CommandStackTest.cpp  CustomScaleBuilderTest.cpp  ExpressionDestinationRegistryTest.cpp  ExpressionEvaluationTest.cpp  ExpressionModelTest.cpp  ExpressionPhraseEditingTest.cpp  ExpressionReleaseGhostsTest.cpp  FirstPartyDeviceRegistryTest.cpp  HarmonicContextResolverTest.cpp  HarmonicOverlayTest.cpp  LoggerTest.cpp  MidiExporterTest.cpp  MidiImporterTest.cpp  MixerCommandTest.cpp  MixerModelTest.cpp  PitchExpressionEvaluationTest.cpp  PitchModelTest.cpp  PlaceholderTest.cpp  PreparedExpressionRenderModelTest.cpp  ProjectModelTest.cpp  ProjectSerializationTest.cpp  RecordingInputTransformTest.cpp  ScaleLibraryTest.cpp  SimpleOscComplexSynthTest.cpp  TimeModelTest.cpp
tests/integration/: AppServicesCommandPerformanceProbeTest.cpp  AppServicesProjectPackageTest.cpp  AudioPackagePerformanceProbeTest.cpp  AutomationPerformanceProbeTest.cpp  BrowserPerformanceProbeTest.cpp  DeviceChainPerformanceProbeTest.cpp  ExpressionBaselinePerformanceProbeTest.cpp  ExpressionModeUiShellTest.cpp  MacMouseEventTool.mm  MacNativeEditorDriver.h  MacNativeEditorDriver.mm  MemoryAllocationPerformanceProbeTest.cpp  MeteringIntegrationTest.cpp  MidiImportPerformanceProbeTest.cpp  MidiTransportPerformanceProbeTest.cpp  NativeEffectProcessorsTest.cpp  PianoRollPerformanceProbeTest.cpp  PluginMetadataPerformanceProbeTest.cpp  PluginRegistryTest.cpp  SyntheticProjectBenchmarkTest.cpp  TrackListPerformanceProbeTest.cpp  TracktionSyncPerformanceProbeTest.cpp  VstStateRegressionTest.cpp
tests/performance/: SyntheticProjectFixtures.h
(+81 files in other folders)
